--- a/app/src/main/res/layout/bar_action_layout.xml
+++ b/app/src/main/res/layout/bar_action_layout.xml
@@ -38,6 +38,18 @@
         tools:text="Title" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/buttonEndBasic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="@string/note"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="@dimen/margin_small"
+        tools:visibility="visible"
+        android:visibility="gone"/>
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/materialButtonEnd"
         style="?attr/materialIconButtonFilledStyle"
         android:layout_width="wrap_content"
@@ -48,8 +60,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:icon="@drawable/baseline_more_vert_24"
-        tools:visibility="visible" />
+        app:icon="@drawable/baseline_more_vert_24"
+        tools:visibility="visible"
+        android:visibility="gone"/>
 
     <com.google.android.material.materialswitch.MaterialSwitch
         android:id="@+id/toggle_switch"
