--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_homeFragment_to_settingFragment"
             app:destination="@id/settingFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_reminderFragment"
+            app:destination="@id/reminderFragment" />
         />
     </fragment>
     <fragment
@@ -56,4 +59,9 @@
         android:name="com.roman.mynote.ui.setting.SettingFragment"
         tools:layout="@layout/fragment_setting"
         android:label="SettingFragment" />
+    <fragment
+        android:id="@+id/reminderFragment"
+        android:name="com.roman.mynote.ui.reminder.ReminderFragment"
+        android:label="ReminderFragment"
+        tools:layout="@layout/fragment_new_reminder"/>
 </navigation>
