--- a/app/src/main/res/layout/fragment_dialog_info_note.xml
+++ b/app/src/main/res/layout/fragment_dialog_info_note.xml
@@ -21,8 +21,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:clipToPadding="true"
             app:layout_constraintTop_toBottomOf="@+id/drag_handle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
