--- a/app/src/main/res/layout/fragment_new_reminder.xml
+++ b/app/src/main/res/layout/fragment_new_reminder.xml
@@ -12,25 +12,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/layout_input_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_margin="@dimen/margin_medium"
-            android:visibility="gone"
-            tools:visibility="visible">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_text_title"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="top"
-                android:hint="@string/text_title" />
-        </com.google.android.material.textfield.TextInputLayout>
 
 
         <com.google.android.material.card.MaterialCardView
@@ -45,7 +27,8 @@
             android:layout_marginTop="392dp"
             android:layout_marginEnd="@dimen/margin_medium"
             android:layout_marginBottom="@dimen/margin_medium"
-            tools:visibility="gone">
+            tools:visibility="visible"
+            android:visibility="visible">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -60,7 +43,9 @@
                     android:layout_margin="@dimen/margin_small"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:tint="?attr/colorPrimary" />
+                    app:tint="?attr/colorPrimary"
+                    tools:visibility="visible"
+                    android:visibility="gone"/>
 
                 <ImageButton
                     android:id="@+id/button_reddy"
@@ -71,18 +56,45 @@
                     android:layout_margin="@dimen/margin_small"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:tint="?attr/colorPrimary" />
+                    app:tint="?attr/colorPrimary"
+                    android:visibility="invisible"
+                    tools:visibility="visible"/>
 
-
-                <CalendarView
-                    android:id="@+id/calendar_view"
+                <ViewFlipper
+                    android:id="@+id/view_flipper"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:inAnimation="@android:anim/fade_in"
+                    android:outAnimation="@android:anim/fade_out"
+                    app:layout_constraintTop_toBottomOf="@+id/button_reddy"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/button_reddy"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent">
+                    <CalendarView
+                        android:id="@+id/calendar_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        />
 
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/layout_input_title"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_margin="@dimen/margin_medium"
+                        android:visibility="gone"
+                        tools:visibility="visible">
+
+
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/edit_text_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="top"
+                            android:hint="@string/text_title" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </ViewFlipper>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
