fix save reminder note

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,14 +38,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
-
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
@@ -53,10 +45,6 @@
             android:clipToPadding="false"
             android:paddingBottom="100dp"
             tools:listitem="@layout/note_card" />
-
-
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <include
         android:id="@+id/layout_floating_option"
@@ -91,12 +79,12 @@
                 android:src="@drawable/ic_notifications_none"
                 app:tint="?attr/colorPrimary"
                 android:layout_marginHorizontal="12dp"
-                app:layout_constraintBottom_toBottomOf="@+id/iv_user_profile_image"
-                app:layout_constraintEnd_toStartOf="@+id/iv_user_profile_image"
-                app:layout_constraintTop_toTopOf="@+id/iv_user_profile_image" />
+                app:layout_constraintBottom_toBottomOf="@+id/iv_setting"
+                app:layout_constraintEnd_toStartOf="@+id/iv_setting"
+                app:layout_constraintTop_toTopOf="@+id/iv_setting" />
 
             <ImageButton
-                android:id="@+id/iv_user_profile_image"
+                android:id="@+id/iv_setting"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="?attr/actionBarItemBackground"
