--- a/app/src/main/res/layout/layout_item_option.xml
+++ b/app/src/main/res/layout/layout_item_option.xml
@@ -1,58 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="?attr/backgroundTint"
-    android:padding="@dimen/padding_small">
+    android:clickable="true"
+    android:focusable="true"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/image_reference"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/ic_notifications_none"
-        android:layout_margin="@dimen/margin_medium"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        app:tint="?attr/colorPrimary" />
+        <ImageView
+            android:id="@+id/image_reference"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_notifications_none"
+            android:layout_margin="@dimen/margin_medium"
+            android:padding="@dimen/margin_medium"
+            android:background="@drawable/background_circle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <TextView
-        android:id="@+id/text_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="@string/notifications"
-        android:textSize="@dimen/size_title"
-        android:textStyle="bold"
-        tools:ignore="SpUsage"
-        android:textColor="?attr/colorPrimary"
-        android:layout_marginHorizontal="@dimen/margin_medium"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/image_reference"/>
+        <TextView
+            android:id="@+id/text_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/notifications"
+            android:textSize="@dimen/size_title"
+            android:textStyle="bold"
+            tools:ignore="SpUsage"
+            android:textColor="?attr/colorPrimary"
+            android:layout_marginHorizontal="@dimen/margin_medium"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/image_reference"
+            app:layout_constraintBottom_toTopOf="@+id/text_description"/>
 
-    <TextView
-        android:id="@+id/text_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/description_notification"
-        app:layout_constraintStart_toEndOf="@+id/image_reference"
-        app:layout_constraintTop_toBottomOf="@+id/text_title"
-        app:layout_constraintEnd_toStartOf="@id/image_arrow_start"
-        android:layout_marginHorizontal="@dimen/margin_medium"
-        android:visibility="visible"/>
+        <TextView
+            android:id="@+id/text_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/description_notification"
+            app:layout_constraintStart_toEndOf="@+id/image_reference"
+            app:layout_constraintTop_toBottomOf="@+id/text_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginHorizontal="@dimen/margin_medium"
+            android:visibility="visible"/>
 
-    <ImageView
-        android:id="@+id/image_arrow_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/baseline_arrow_right"
-        android:layout_margin="@dimen/margin_medium"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:tint="?attr/colorPrimary" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.google.android.material.card.MaterialCardView>
