--- a/app/src/main/res/layout/note_card.xml
+++ b/app/src/main/res/layout/note_card.xml
@@ -49,31 +49,57 @@
             tools:visibility="visible"
             android:contentDescription="@string/description_image" />
 
-
-        <TextView
-            android:id="@+id/text_notes"
-            tools:text="@string/lorem_text"
-            android:textSize="14sp"
-            android:maxLines="4"
-            android:paddingVertical="8dp"
-            android:paddingHorizontal="12dp"
+        <LinearLayout
+            android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_title"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageView
-            android:id="@+id/image_reference"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_margin="@dimen/margin_medium"
-            app:layout_constraintTop_toBottomOf="@id/text_view_title"
-            app:layout_constraintBottom_toTopOf="@+id/text_date"
-            android:src="@drawable/ic_audio"
-            tools:visibility="visible"
-            android:visibility="gone"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/text_view_title"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/text_notes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="4"
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="8dp"
+                android:textSize="14sp"
+                tools:visibility="gone"
+                android:visibility="invisible"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:text="@string/lorem_text" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_audio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/time_audio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="00:40"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginVertical="@dimen/margin_small"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+                <ImageView
+                    android:id="@+id/image_audio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_audio"
+                    app:tint="?attr/colorPrimary"
+                    android:layout_marginStart="@dimen/margin_medium"
+                    app:layout_constraintTop_toBottomOf="@+id/time_audio"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/text_date"
@@ -88,7 +114,7 @@
             android:padding="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/text_notes"
+            app:layout_constraintTop_toBottomOf="@+id/container"
             app:layout_constraintStart_toStartOf="parent" />
 
         <View
