update general code

--- a/app/src/main/res/layout/note_card.xml
+++ b/app/src/main/res/layout/note_card.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView android:id="@+id/notes_container"
+<com.google.android.material.card.MaterialCardView
+    android:id="@+id/notes_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="12dp"
@@ -19,113 +20,57 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+       <LinearLayout
+           android:id="@+id/container_icon"
+           android:layout_width="match_parent"
+           android:layout_height="120dp"
+           android:orientation="horizontal"
+           android:gravity="center"
+           app:layout_constraintTop_toTopOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"
+           tools:background="@color/md_theme_light_tertiary">
+
+           <ImageView
+               android:id="@+id/image_ref"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               tools:src="@drawable/image_audio"
+               android:contentDescription="@string/description_image"/>
+
+       </LinearLayout>
+
         <TextView
-            android:id="@+id/text_view_title"
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_margin="@dimen/margin_small"
+            app:layout_constraintTop_toBottomOf="@+id/container_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="@string/text_example_name_audio"/>
+
+
+        <TextView
+            android:id="@+id/last_update"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:ellipsize="marquee"
-            android:fontFamily="@font/aldrich"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:padding="12dp"
-            android:scrollHorizontally="true"
-            android:singleLine="true"
-            tools:text="@string/title_new_note"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            tools:text="hace 3 horas"
+            app:layout_constraintTop_toBottomOf="@+id/title"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_margin="@dimen/margin_small"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <ImageButton
-            android:id="@+id/image_pind"
+            android:id="@+id/btn_pin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_pin"
-            android:layout_margin="8dp"
             android:background="?attr/actionBarItemBackground"
+            android:src="@drawable/ic_pin"
+            android:layout_margin="@dimen/margin_small"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="invisible"
-            tools:visibility="visible"
-            android:contentDescription="@string/description_image" />
-
-        <LinearLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_title"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/text_notes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:maxLines="4"
-                android:paddingHorizontal="12dp"
-                android:paddingVertical="8dp"
-                android:textSize="14sp"
-                tools:visibility="gone"
-                android:visibility="invisible"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:text="@string/lorem_text" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/layout_audio"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/time_audio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="00:40"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginVertical="@dimen/margin_small"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
-
-                <ImageView
-                    android:id="@+id/image_audio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_audio"
-                    app:tint="?attr/colorPrimary"
-                    android:layout_marginStart="@dimen/margin_medium"
-                    app:layout_constraintTop_toBottomOf="@+id/time_audio"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/text_date"
-            android:text="@string/example_date"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:scrollHorizontally="true"
-            android:textSize="12sp"
-            android:textStyle="normal"
-            android:gravity="end"
-            android:maxLines="10"
-            android:padding="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/container"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <View
-            android:id="@+id/color_indicator"
-            android:layout_width="match_parent"
-            android:layout_height="8dp"
-            tools:background="@color/md_theme_light_primary"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
+            app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
